# chatterbox

./: example_for_mac.py  pyproject.toml
