[project]
name = "chatterbox-tts"
version = "0.1.6"
description = "Chatterbox: Open Source TTS and Voice Conversion by Resemble AI"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "resemble-ai", email = "engineering@resemble.ai"}
]
dependencies = [
    "numpy>=2.0",
    "librosa==0.11.0",
    "s3tokenizer",
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "torchcodec",
    "transformers==5.3.0",
    "diffusers==0.37.0",
    "resemble-perth==1.0.1",
    "conformer==0.3.2",
    "safetensors==0.7.0",
    "spacy-pkuseg",
    "pykakasi==2.3.0",
    "gradio==6.9.0",
    "pyloudnorm",
    "omegaconf",
    "ml-dtypes>=0.5.0",
    "setuptools<80",
]

[project.urls]
Homepage = "https://github.com/resemble-ai/chatterbox"
Repository = "https://github.com/resemble-ai/chatterbox"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
